infra/k8s-prod/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration-pod
  template:
    metadata:
      labels:
        app: expiration-pod
    spec:
      containers:
        - name: expiration-container
          image: aseel/expiration
