infra/k8s-prod/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-pod
  template:
    metadata:
      labels:
        app: orders-pod
    spec:
      containers:
        - name: orders-container
          image: aseel/orders
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  type: ClusterIP
  selector:
    app: orders-pod
  ports:
    - name: orders-port
      protocol: TCP
      port: 3000
      targetPort: 3000
