infra/k8s-prod/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments-pod
  template:
    metadata:
      labels:
        app: payments-pod
    spec:
      containers:
        - name: payments-container
          image: aseel/payments
---
apiVersion: v1
kind: Service
metadata:
  name: payments-service
spec:
  type: ClusterIP
  selector:
    app: payments-pod
  ports:
    - name: payments-port
      protocol: TCP
      port: 3000
      targetPort: 3000
