infra/k8s-prod/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations: # Annotations are used to add non-identifying metadata to objects
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true' # Allows us to use regex in path matching below
spec:
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-service
              servicePort: 3000
          - path: /api/tickets/?(.*)
            backend:
              serviceName: tickets-service
              servicePort: 3000
          - path: /api/orders/?(.*)
            backend:
              serviceName: orders-service
              servicePort: 3000
          - path: /api/payments/?(.*)
            backend:
              serviceName: payments-service
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-service
              servicePort: 3000
